fix z-index issue when sidebar is collapsable

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -12,6 +12,7 @@
     position: absolute;
     opacity: 0.85;
     padding: 0;
+    z-index: 4;
   }
 
   &.hidden {
